--- a/frontend/application_tracker/src/components/UpdateApplication/Update.css
+++ b/frontend/application_tracker/src/components/UpdateApplication/Update.css
@@ -4,25 +4,31 @@
     align-items: center;
     padding: 20px;
     width: 100%;
+    height: 100%;
+    /* border: 1px red solid; */
+    box-sizing: border-box; 
 }
 
 .update-form {
     display: flex;
     flex-direction: column;
     color: #333;
-    padding: 30px;
+    padding: 25px;
     background-color: white;
     border: 1px solid #e2e8f0;
+    /* border: 1px solid yellow; */
     border-radius: 12px;
     box-shadow: 0 2px 8px rgba(100, 116, 139, 0.08);
-    gap: 20px;
+    gap: 10px;
+    height: 88%;
+    overflow-y: hidden;
 }
 
 .update-title {
     font-size: 24px;
     font-weight: 600;
     color: #1e293b;
-    margin: 0 0 10px 0;
+    margin: 0px;
     text-align: center;
 }
 
@@ -35,7 +41,7 @@
 .update-form-label {
     font-weight: 600;
     color: #1e293b;
-    font-size: 14px;
+    font-size: 12px;
 }
 
 .update-form-input {
@@ -111,4 +117,28 @@
     .update-button-group {
         flex-direction: column;
     }
+}
+
+
+@media (min-width: 481px) and (max-width: 1024px) {
+  
+  /* .update-container {
+    border: 1px solid yellow;
+  }   */
+
+  .update-form {
+    height: 40%;
+    width: 80%;
+    padding: 20px;
+    /* border: 1px solid red; */
+  }
+  
+  .update-form-label {
+    font-size: 14px;
+  }
+  
+  .update-form-input {
+    padding: 14px 18px;
+    font-size: 16px;
+  }
 }
